# distributed-calculating

./: .gitignore  CMakeLists.txt  README.md
lab1/: comm.c  comm.h  connect.c  connect.h  ipc.c  logging.c  logging.h  main.c
lab2/: Makefile  a.out  comm.c  comm.h  connect.c  connect.h  ipc.c  logging.c  logging.h  pa23.c  transfer.c  transfer.h  waiter.c  waiter.h
lab3/: banking.h  connect.c  ipc.c  logging.c  transfer.c  transfer.h  waiter.c  waiter.h
pa1/: comm.c  comm.h  connect.c  ipc.c  main.c
pa2/: ipc.c  logging.h  pa2.c  sender.c  sender.h
pa3/: comm.c  comm.h  connect.c  connect.h  ipc.c  logging.c  logging.h  pa3  pa3.c  sender.c  sender.h  transfer.c  transfer.h  waiter.c  waiter.h
pa4/: comm.h  ipc.c  log.c  opers.c  opers.h  pa4  pa4.c  time.c
